# healthcare-interoperability-assistant

./: .env.example  README.md  config.json  pyproject.toml
src/: main.py
src/config/: config.py
src/llm/: llm_service.py
